<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/base"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/btnBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/box_one"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBox1"
        app:layout_constraintVertical_bias="0.069">

        <TextView
            android:id="@+id/btnBox2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/box_two"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="199dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintVertical_bias="0.069">

            <TextView
                android:id="@+id/btnBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_light"
                android:text="@string/box_three"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/btnBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/box_four"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/btnBox5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:text="@string/box_five"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.995"
        android:gravity="center">

        <Button
            android:id="@+id/btnRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/yellow" />

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>